--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">SoulFull</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="content_descriptor_fav">Add favorite restaurant</string>
+
+    <string name="review_heading">Review Highlight</string>
+    <string name="trailer_heading">Trailer</string>
+    <string name="overview_heading">Overview</string>
+
+    <string name="release_title">Release Date:</string>
+    <string name="rating_title">Rating:</string>
+    <string name="title_movie">Title:</string>
+
+    <string name="popular_option_title">Popular</string>
+    <string name="toprated_option_title">Top Rated</string>
+    <string name="favorite_option_title">Favorite</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
